--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+html {
+    font-family: Arial, Helvetica, sans-serif;
+    color: antiquewhite;
+}
+
+body {
+    background-color: rgb(51, 51, 51);
+}
+
 .header {
     display: inline-block;
+    align-content: center;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+}
+
+.header-button {
+    padding: 10px;
+    background-color: darkslategray;
+    border: none;
+    border-radius: 15px;
+    color: antiquewhite;
+    font-size: 1em;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: darkslategray;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
